featur untuk pengembalian
